--- a/gh/hosts.yml
+++ b/gh/hosts.yml
@@ -1,5 +1,5 @@
 github.com:
-    git_protocol: https
-    users:
-        gingerknight:
-    user: gingerknight
+  git_protocol: ssh
+  users:
+    gingerknight:
+  user: gingerknight
